--- a/frontend/index.html
+++ b/frontend/index.html
@@ -11,8 +11,9 @@
     <div id="login-screen" class="screen active">
         <div class="login-container">
             <div class="logo">
-                <h1>📁 MOCO</h1>
-                <p>Tu gestor de archivos en la nube</p>
+                <h1>📁 M.O.C.O.</h1>
+                <p style="font-size: 0.95em; margin-bottom: 5px;">Me Olvido de Confiar en Otros</p>
+                <p style="font-size: 0.85em; opacity: 0.7;">Tu gestor de archivos en la nube</p>
             </div>
             
             <div class="tabs">
